--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "electron": "^8.2.0"
+  },
+  "devDependencies": {
+    "electron-packager": "^14.2.1"
   }
 }
